# Otter

./: .hgtags  .makefilepaths  Dockerfile  INSTALL  LICENSE  Makefile  Makefile2  README.md  randomrepair  run-libc
otter/: Makefile.in  Makefile.rules  README  README.md  configure.ac  myocamlbuild.ml  otter.byte  otter.pl  run  run-libc  run-merge  run-net  undeffun
otter/benchmark/: BenchmarkOtter.mlpack  BenchmarkUtil.mlpack  runbenchmarkotter.ml
otter/benchmark/BenchmarkOtter/: OtterBenchmarks.ml
otter/benchmark/BenchmarkUtil/: BackOtterBenchmarkingReporter.ml  BenchmarkingReporter.ml  _tags
otter/doc/: Makefile
otter/examples/: settest4.c  settest5.c  test-prop2.c  test-prop7.c  test0.c  test19.c  test34.c  test8.c
otter/examples/BackOtter/: dfa_hybrid.c  example1.c  example2.c  shift.c  test1.c
otter/examples/tinyhttpd-broken/: Makefile
otter/libc/: dirent.h  errno.h  fcntl.h  grp.h  limits.h  netdb.h  pwd.h  setjmp.h  signal.h  sprintf.c  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  strcasecmp.c  string.h  strings.h  time.h  unistd.h  utime.h
otter/libc/__otter/: all.h  arpa_inet.c  assert.c  ctype.c  dirent.c  fcntl.c  grp.c  otter_fs.c  otter_fs.h  otter_fs_util.c  otter_scheduler.h  otter_user.h  pwd.c  signal.c  socket.c  stat.c  stdio.c  stdlib.c  string.c  sys_mman.c  sys_uio.c  syslog.c  time.c  unistd.c
otter/libc/arpa/: inet.h
otter/libc/linux/: limits.h
otter/libc/netinet/: in.h  ip.h
otter/libc/sys/: mman.h  param.h  socket.h  stat.h  time.h  types.h  uio.h
otter/myocamlbuild.tools/: dotpack.ml  odoc_dotpack.ml
otter/scripts/: browse.vim  debug  detimelines  diff_line_coverage.py  maketree.py  maketree_multiotter.py  path.py
otter/src/: All.docpack  BackOtter.mlpack  CilUtilities.mlpack  CilUtilities.odocl  DataStructures.mlpack  DataStructures.odocl  MultiOtter.mllib  MultiOtter.mlpack  OcamlUtilities.mlpack  OcamlUtilities.odocl  Otter.mllib  Otter.mlpack  Otter.odocl  OtterBytes.mlpack  OtterBytes.odocl  OtterCFG.mlpack  OtterCore.mlpack  OtterCore.odocl  OtterDriver.mlpack  OtterDriver.odocl  OtterESD.mlpack  OtterExtensions.mlpack  OtterGraph.mlpack  OtterJob.mlpack  OtterQueue.mlpack  OtterReporter.mlpack  runotter.ml
otter/src/BackOtter/: BackOtterBuiltinFunctions.ml  BackOtterDriver.ml  BackOtterErrors.ml  BackOtterExternalPaths.ml  BackOtterFileJob.ml  BackOtterFunctionJob.ml  BackOtterGcov.ml  BackOtterInterceptor.ml  BackOtterJob.ml  BackOtterJobExtension.ml  BackOtterMain.ml  BackOtterQueue.ml  BackOtterReporter.ml  BackOtterTargetTracker.ml  BackOtterTargets.ml  BackOtterTimer.ml  BackOtterUtilities.ml  BackwardRank.ml  BidirectionalQueue.ml  BuiltinFunctions.ml  ClosestToTargetsQueue.ml  ClosestToTargetsStrategy.ml  ContentQueue.ml  CovToFundec.ml  ExternalBoundingPath.ml  ExternalBoundingPathsStrategy.ml  FunctionManager.ml  FunctionQueue.ml  FunctionRanker.ml  LegacyBackOtter.ml  LineTargets.ml  Queue.ml  RemovableQueue.ml  SDSEUtilities.ml  SimpleEntryfnQueue.ml  SimpleOtherfnQueue.ml  _tags
otter/src/CilUtilities/: CilCallgraph.ml  CilData.ml  CilPrinter.ml  CilPtranal.ml  FindCil.ml  FindFns.ml  TraceLines.ml  WidenBitfields.ml
otter/src/DataStructures/: Counter.ml  Deferred.ml  EfficientSequence.ml  ImmutableArray.ml  NamedCounter.ml  PrioritySearchQueue.ml  RandomAccessList.ml  RandomBag.ml  Ternary.ml  TimedSet.ml
otter/src/DebugOtter/: DebugOtterDriver.ml  DebugOtterExecute.ml
otter/src/MultiOtter/: GenerationalQueue.ml  MultiDriver.ml  MultiFunctions.ml  MultiInterceptor.ml  MultiJob.ml  MultiJobUtilities.ml  MultiTypes.ml  _tags
otter/src/OcamlUtilities/: FormatPlus.ml  ListPlus.ml  Memo.ml  Module.ml  Output.ml  Profiler.ml  Timer.ml  UnixPlus.ml  UserSignal.ml
otter/src/Otter/: LinkCheck.ml  OtterMain.ml  RunReachingDef.ml  RunRmtmps.ml  builtin_function.ml  bytes.ml  bytesPrinter.ml  bytesUtility.ml  callchain_backward.ml  cilutility.ml  core.ml  driver.ml  eval.ml  executeargs.ml  executedebug.ml  executemain.ml  findFns.ml  function.ml  getProgInfo.ml  immutableArray.ml  interceptors.ml  invInput.ml  jobs.ml  memOp.ml  multiprocess.ml  operation.ml  output.ml  pathMerging.ml  prioritizer.ml  report.ml  stp.ml  stpc.ml  ternary.ml  to_string.ml  types.ml  utility.ml
otter/src/OtterBytes/: Bytes.ml  BytesPrinter.ml  BytesSTP.ml  BytesUtility.ml  Stp.ml  Stpc.ml
otter/src/OtterCFG/: Distance.ml  DistanceToReturn.ml  DistanceToTargets.ml  Instruction.ml
otter/src/OtterCore/: BuiltinFunctions.ml  Cilutility.ml  Core.ml  Coverage.ml  CoverageData.ml  Decision.ml  DecisionPath.ml  Driver.ml  Errors.ml  Executeargs.ml  Executedebug.ml  Expression.ml  FunctionEntries.ml  GetProgInfo.ml  Info.ml  InitBytes.ml  InstructionInfo.ml  Interceptor.ml  Job.ml  Log.ml  MemOp.ml  Operator.ml  PathCondition.ml  Printer.ml  ProgramPoints.ml  Report.ml  State.ml  Statement.ml  SymbolicPointers.ml  Target.ml  TrackingFunctions.ml  Types.ml  TypesPrinter.ml
otter/src/OtterDriver/: Driver.ml  LegacyDriver.ml  _tags
otter/src/OtterESD/: Arithmetic.ml  MyReachingDefs.ml  ProximityGuidedStrategy.ml
otter/src/OtterExtensions/: CProfiler.ml  ConditionalsForking.ml  Gcov.ml  JobProfiler.ml
otter/src/OtterGraph/: Graph.ml  InstrStmt.ml  _tags
otter/src/OtterJob/: FileJob.ml  FunctionJob.ml  Job.ml
otter/src/OtterQueue/: BatchQueue.ml  BestFirstQueue.ml  Queue.ml  _tags  (+21 more)
otter/test/: TestOtter.mlpack  TestOtterCFG.mlpack  TestOtterCore.mlpack  TestOtterIntegration.mlpack  TestOtterJob.mlpack  TestOtterPragmaTests.mlpack  TestOtterSystem.mlpack  TestUtil.mlpack  TestUtil.odocl  runtestotter.ml
(+5290 files in other folders)
